# django-model-manager

./: .gitignore  .gitreview  Dockerfile  MANIFEST.in  README.rst  generate_source_yaml.py  manage.py  manage_backend.py  model_manager_start.sh  requirements.txt  setup.cfg  test.py  views.py
devops_legacy/: settings.py  views.py
devops_portal/: __init__.py  base_settings.py  celery.py  dashboard.py  exceptions.py  overrides.py  urls.py  views.py  wsgi.py
devops_portal/api/: __init__.py  keystone.py
devops_portal/cookiecutter/: forms.py  tables.py
devops_portal/enabled/: _4000_devops_portal.py  _4020_devops_portal_overview_panel.py  _4030_devops_portal_cookiecutter_panel.py
devops_portal/settings/: base.py  static.py  theme.py
devops_portal/templates/: _header.html  _stylesheets.html  base.html
devops_portal/templatetags/: context_selection.py  jenkins.py  themes.py
devops_portal/utils/: themes.py
devops_portal_app/: exceptions.py  middleware.py  overrides.py
devops_portal_app/cookiecutter/: actions.py  panel.py  tables.py  urls.py  views.py  workflows.py
devops_portal_auth/: backend.py  exceptions.py  forms.py  user.py  utils.py
devops_portal_backend/: admin.py  apps.py  pagination.py  settings.py
model_manager/: celery.py  exceptions.py  urls.py  views.py  wsgi.py
model_manager_auth/: backend.py  exceptions.py  policy.py  urls.py  user.py  views.py
model_manager_backend/: forms.py  models.py  router.py  serializers.py  settings.py  urls.py  views.py
requirements/: devops_portal.txt  devops_portal_backend.txt  model_manager.txt
(+194 files in other folders)
