[metadata]
name = devops-portal
summary = Horizon based Devops Portal
description-file =
    README.rst
author = Ales Komarek
author-email = akomarek@mirantis.com
home-page = http://github.com/Mirantis/devops-portal
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Environment :: OpenStack
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    devops_portal
    devops_portal_auth

[pytest]
python_files=test_*.py *tests.py

[flake8]
exclude=requirements,.tox,.travis,docs
